--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-Mehyar Science Foundation
+<!DOCTYPE HTML>
+
+<html>
+<head>
+<title>Mehyar Science Foundation</title>
+</head>
+
+<body>
+<b>Mehyar Science Foundation</b>
+<p>
+In memory of my mother, Lina Mehyar, who battled cancer for many years and passed away in 2018. <br>
+As a doctor she helped numerous patients, and as a mother she dedicated her life to raising her children. <br>
+If I have any success in my life, it's indebted to her.
+</p>
+
+This foundation aims to make charitable contributions to:
+<p>
+- Science and engineering education <br>
+- Physical health and medical research <br>
+- Childhood/Youth education, teaching, and learning <br>
+<p>
+
 
 © 2021 - 2025
+
+</body>
+</html>
